# BitTorrentClient

./: .clangd  .gitignore  .justfile  CMakeLists.txt  bencode.cpp  bencode.h  justfile  main.cpp
include/: bencode.h  error_codes.h  errors.h  helpers.h  torrent.h  utils.h
include/Bencode/: bencodeDecoder.h  bencodeEncoder.h  bencodeValue.h
include/Net/: httpConnection.h
include/Torrent/: peer.h  torrentFile.h  torrentParser.h
include/Tracker/: httpTrackerSession.h  trackerManager.h
src/: bencode.cpp  errors.cpp  main.cpp  torrent.cpp
src/Bencode/: bencodeDecoder.cpp  bencodeEncoder.cpp  bencodeValue.cpp
src/Net/: httpConnection.cpp
src/Torrent/: torrentParser.cpp
src/Tracker/: trackerManager.cpp
tests/: bencodeTest.cpp  torrentFileTest.cpp
